changes zc and bm

--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -185,19 +185,19 @@
                                     <tr>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
@@ -209,13 +209,13 @@
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
