--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -169,31 +169,31 @@
                                     <tr>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 13rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 13rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 13rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 13rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 13rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
