--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
@@ -19,9 +19,10 @@ tbody{
   thead tr th {
     font-size: 12px;
     padding-top: 3px;
+    color: #575757;
     padding-bottom: 3px;
     min-width: 80px;
-    font-weight: lighter;
+    font-weight: bold;
 }
   }
   .sec-table{
@@ -33,7 +34,7 @@ tbody{
       padding-top: 3px;
       padding-bottom: 3px;
       min-width: 220px;
-      font-weight: lighter;
+      font-weight: bold;
   }
     }
     .third-table{
@@ -45,7 +46,7 @@ tbody{
           padding-top: 3px;
           padding-bottom: 3px;
           min-width: 220px;
-          font-weight: lighter;
+          font-weight: bold;
       }
         }
 
@@ -57,3 +58,63 @@ thead tr {
     height: 30px;
 }
 
+/* Center tables for demo */
+table {
+  margin: 0 auto;
+}
+
+/* Default Table Style */
+table {
+  color: #333;
+  background: white;
+  border: 1px solid grey;
+  font-size: 12pt;
+  border-collapse: collapse;
+}
+table thead th,
+table tfoot th {
+  color: #777;
+  background: rgba(0,0,0,.1);
+}
+table caption {
+  padding:.5em;
+}
+table th,
+table td {
+  padding: .5em;
+  border: 1px solid lightgrey;
+}
+/* Zebra Table Style */
+[data-table-theme*=zebra] tbody tr:nth-of-type(odd) {
+  background: rgba(0,0,0,.05);
+}
+[data-table-theme*=zebra][data-table-theme*=dark] tbody tr:nth-of-type(odd) {
+  background: rgba(255,255,255,.05);
+}
+/* Dark Style */
+[data-table-theme*=dark] {
+  color: #ddd;
+  background: #333;
+  font-size: 12pt;
+  border-collapse: collapse;
+}
+[data-table-theme*=dark] thead th,
+[data-table-theme*=dark] tfoot th {
+  color: #aaa;
+  background: rgba(0255,255,255,.15);
+}
+[data-table-theme*=dark] caption {
+  padding:.5em;
+}
+[data-table-theme*=dark] th,
+[data-table-theme*=dark] td {
+  padding: .5em;
+  border: 1px solid grey;
+}
+tbody tr {
+  background: white !important;
+}
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 32px;
+}
