--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -55,7 +55,7 @@
 
     </div>
 <div class="row">
-    <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm mt-3">
+    <div class="col-lg-12 p-0 ist-table overflow-auto shadow-xs rounded-sm mt-3">
         <table class="table mb-0">
             <thead>
             <tr class=" text-center">
@@ -353,7 +353,7 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-12 p-0 sec-table overflow-auto border shadow-xs rounded-sm mt-3">
+    <div class="col-lg-12 p-0 sec-table overflow-auto  shadow-xs rounded-sm mt-3">
 
         <table class="table mb-0 ">
                     <thead>
@@ -410,7 +410,7 @@
 </div>
 
 <div class="row ">
-    <div class="col-lg-12 p-0  third-table  overflow-auto border shadow-xs rounded-sm  mt-3">
+    <div class="col-lg-12 p-0  third-table  overflow-auto  shadow-xs rounded-sm  mt-3">
         <table class="table mb-0 ">
             <thead>
             <tr class=" text-center">
