--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
@@ -30,7 +30,8 @@ tbody{
         border: none !important;
     }
     thead tr th {
-      font-size: 12px;
+    color: #575757;
+    font-size: 12px;
       padding-top: 3px;
       padding-bottom: 3px;
       min-width: 220px;
@@ -42,7 +43,8 @@ tbody{
             border: none !important;
         }
         thead tr th {
-          font-size: 12px;
+    color: #575757;
+    font-size: 12px;
           padding-top: 3px;
           padding-bottom: 3px;
           min-width: 220px;
@@ -74,7 +76,7 @@ table {
 table thead th,
 table tfoot th {
   color: #777;
-  background: rgba(0,0,0,.1);
+  background:  #c7d2fe;
 }
 table caption {
   padding:.5em;
@@ -86,22 +88,22 @@ table td {
 }
 /* Zebra Table Style */
 [data-table-theme*=zebra] tbody tr:nth-of-type(odd) {
-  background: rgba(0,0,0,.05);
+  background:  #c7d2fe;
 }
 [data-table-theme*=zebra][data-table-theme*=dark] tbody tr:nth-of-type(odd) {
-  background: rgba(255,255,255,.05);
+  background: #c7d2fe;
 }
 /* Dark Style */
 [data-table-theme*=dark] {
   color: #ddd;
-  background: #333;
+  background:  #c7d2fe;
   font-size: 12pt;
   border-collapse: collapse;
 }
 [data-table-theme*=dark] thead th,
 [data-table-theme*=dark] tfoot th {
   color: #aaa;
-  background: rgba(0255,255,255,.15);
+  background:  #c7d2fe;
 }
 [data-table-theme*=dark] caption {
   padding:.5em;
@@ -115,6 +117,6 @@ tbody tr {
   background: white !important;
 }
 ::-webkit-scrollbar-thumb {
-  background: gray;
+  background: #c7d2fe;
   border-radius: 32px;
 }
