--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
@@ -19,10 +19,10 @@ tbody{
   thead tr th {
     font-size: 12px;
     padding-top: 3px;
-    color: #575757;
+    color: #292929;
     padding-bottom: 3px;
     min-width: 80px;
-    font-weight: bold;
+    font-weight: 700;
 }
   }
   .sec-table{
@@ -30,12 +30,12 @@ tbody{
         border: none !important;
     }
     thead tr th {
-    color: #575757;
+    color: #292929;
     font-size: 12px;
       padding-top: 3px;
       padding-bottom: 3px;
       min-width: 220px;
-      font-weight: bold;
+      font-weight: 700;
   }
     }
     .third-table{
@@ -43,12 +43,12 @@ tbody{
             border: none !important;
         }
         thead tr th {
-    color: #575757;
+    color: #292929;
     font-size: 12px;
           padding-top: 3px;
           padding-bottom: 3px;
           min-width: 220px;
-          font-weight: bold;
+          font-weight: 700;
       }
         }
 
@@ -76,7 +76,7 @@ table {
 table thead th,
 table tfoot th {
   color: #777;
-  background:  #c7d2fe;
+  background:  #e7e5e4;
 }
 table caption {
   padding:.5em;
@@ -88,22 +88,22 @@ table td {
 }
 /* Zebra Table Style */
 [data-table-theme*=zebra] tbody tr:nth-of-type(odd) {
-  background:  #c7d2fe;
+  background:  #e7e5e4;
 }
 [data-table-theme*=zebra][data-table-theme*=dark] tbody tr:nth-of-type(odd) {
-  background: #c7d2fe;
+  background: #e7e5e4;
 }
 /* Dark Style */
 [data-table-theme*=dark] {
   color: #ddd;
-  background:  #c7d2fe;
+  background:  #e7e5e4;
   font-size: 12pt;
   border-collapse: collapse;
 }
 [data-table-theme*=dark] thead th,
 [data-table-theme*=dark] tfoot th {
   color: #aaa;
-  background:  #c7d2fe;
+  background:  #e7e5e4;
 }
 [data-table-theme*=dark] caption {
   padding:.5em;
@@ -117,6 +117,11 @@ tbody tr {
   background: white !important;
 }
 ::-webkit-scrollbar-thumb {
-  background: #c7d2fe;
+  background: #e7e5e4;
   border-radius: 32px;
+}
+.sub-table{
+th{
+  background:#f5f5f4 !important;
+}
 }
