--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -45,7 +45,7 @@
         <div  class="col-lg-12">
 <!--{{AssignTargetHeading|json}}-->
 <!--            {{AssignedTargetHeading|json}}-->
-            <div class="table-responsive overflow-y-auto overflow-x-hidden" id="map_canvas" >
+            <div class="table-responsive overflow-y-auto overflow-x-auto" id="map_canvas" >
                 <table class="table table-striped" >
 
 <!--                    <thead  *ngIf="AssignTargetHeading?.length>0">-->
