--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.html
@@ -32,25 +32,35 @@
                     <!--begin::Action-->
                     <div class="kt-login__actions float-right">
                         <div class="row">
+                            <div class="col-lg-12 text-end pr-16">
+
+                                <mat-icon class="mr-2 bg-green rounded-full text-sm  w-8 h-8 p-2" type="button" id="kt_login_signin_submit" (click)="backDate()">arrow_back_ios</mat-icon>
+
+
+                            <mat-icon type="button" class="bg-green rounded-full text-sm p-2 w-8 h-8" id="kt_login_signin_submit" (click)="foewardDate()">arrow_forward_ios</mat-icon>
+
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-lg-12">
-                                <ng-container *ngFor="let item of data?.daylist; let row=index" class="mx-2">
-                                    <label for="check-{{row}}"  style="cursor: pointer;" [style.BackgroundColor]="item.isCheck==true?'green !important':''"
-                                    [style.Color]="item.isCheck==true?'white !important':''"
-                                    class="m-2 p-2 px-1 text-sm bg-gray-500 w-32 text-center text-white rounded-full"> {{item.date | date}} </label>
-                                    <input id="check-{{row}}"  [checked]="item.isCheck"
+                                <ng-container *ngFor="let item of daylist; let row=index" class="mx-2">
+                                    <label for="check-{{row}}"  style="cursor: pointer;" [style.BackgroundColor]="item.isCheck!=true?'green !important':''"
+                                    [style.Color]="item.isCheck!=true?'white !important':''"
+                                    class="m-2 p-2 px-1 text-sm bg-gray-500 w-32 text-center text-white rounded-full"> {{item.date | date}}</label>
+                                    <input id="check-{{row}}" [disabled]="isCheckDisable(item, row)" (click)="submit(item)"  [checked]="item.isCheck"
                                     (change)="item.isCheck = !item.isCheck" [hidden]="true"   type="checkbox">
                                 </ng-container>
                                 
                                
                             </div>
-                            <div class="col-lg-12 text-end border-t">
+                            <!-- <div class="col-lg-12 text-end border-t">
 
                                 <button (click)="submit()" id="kt_login_signin_submit"
                                         class=" mat-focus-indicator mt-4 mat-flat-button mat-button-base mat-primary bg-green"
                                         [ngClass]="{'kt-spinner mx-2 kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     {{'Submit'}}</button>
-                            </div>
+                            </div> -->
 
                         </div>
 
