--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.scss
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.scss
@@ -4,3 +4,8 @@
 .bg-green{
     background-color: green !important;
 }
+
+.change-color{
+    background: green !important;
+    color: white !important;
+} 
