--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -9,24 +9,20 @@
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
                 </mat-label>
-                <input disabled matInput [matDatepicker]="picker" formControlName="VisitedDate" [matDatepickerFilter]=dateFilter
-                    (dateChange)="setVisitedDate()" autocomplete="off" [min]="minDate" />
-                <mat-datepicker-toggle [disabled]='false' matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker [disabled]='false' #picker [calendarHeaderComponent]="exampleHeader" ></mat-datepicker>
+                <input readonly matInput name="VisitedDate" formControlName="VisitedDate" autocomplete="off" />
+                <mat-icon matSuffix style="cursor: pointer;" (click)="onChange()">mode_edit</mat-icon>
             </mat-form-field>
+
+            <!-- <mat-form-field appearance="outline" class="fld">
+                <input
+                  matInput
+                  placeholder="myPlaceholder"
+                  class="inp"
+                  formControlName="VisitedDate"
+                >
+             
+              </mat-form-field> -->
         </div>
-        <!-- <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-
-            <mat-form-field>
-                <mat-label>Custom calendar header</mat-label>
-                <input matInput [matDatepicker]="picker" [matDatepickerFilter]=dateFilter>
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker [calendarHeaderComponent]="exampleHeader"></mat-datepicker>
-              </mat-form-field>
-
-            
-
-        </div> -->
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Purpose<strong class="matMandatory">*</strong></mat-label>
@@ -35,8 +31,6 @@
                         {{loanType.Name}}
                     </mat-option>
                 </mat-select>
-                <!-- <mat-error *ngIf="hasError('DevProdFlag', 'required')">LoanType <strong>required</strong>
-                </mat-error> -->
             </mat-form-field>
         </div>
         <!-- <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
@@ -84,7 +78,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of tragetList; let row=index">
+                    <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
                         <td>{{row+1}}</td>
                         <td>{{item.UserId}}</td>
                         <td>{{item.VisitedDate}}</td>
@@ -94,6 +88,24 @@
                     </tr>
                 </tbody>
             </table>
+            <div *ngIf="tragetList" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
+                <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+                        <span class="font-bold text-green">Items per page:</span>
+        
+                <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                            style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                    <mat-option [value]="5">5</mat-option>
+                    <mat-option [value]="10">10</mat-option>
+                    <mat-option [value]="25">25</mat-option>
+                    <mat-option [value]="50">50</mat-option>
+                </mat-select>
+                <button (click)="paginate(1)">First</button>
+                <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                     style="display: inline-block;"></pagination-controls>
+                <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+                <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
+        
+            </div>
         </div>
     </div>
 </div>
