minor changes in targets

--- a/src/app/modules/tour-dairy/set-target-tabs/set-target-tabs.component.html
+++ b/src/app/modules/tour-dairy/set-target-tabs/set-target-tabs.component.html
@@ -4,7 +4,9 @@
 
 <div
     class="sm:inset-0 flex flex-col flex-auto min-w-0 overflow-x-hidden overflow-y-auto bg-card dark:bg-transparent">
-    <div [hidden]="isChild" class="heading"> Target Setting
+    <div *ngIf="!PageTitle" [hidden]="isChild" class="heading"> Target Setting
+    </div>
+    <div *ngIf="PageTitle" [hidden]="isChild" class="heading"> {{PageTitle}}
     </div>
 
     <div [hidden]="isChild" class="pt-3" [formGroup]="targetForm">
