--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -18,7 +18,8 @@
 
                             <div class="col-lg-12 pt-2 px-0">
                                 <div class="flex" style="flex-wrap: wrap;">
-
+                                    <app-zone-branch-circle [form]="gridForm" [should_show_circle]="true"
+                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mr-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Name of Officer</mat-label>
@@ -60,6 +61,7 @@
             <thead>
             <tr class=" text-center">
                 <th   style="height: 40px;" rowspan="2">Date</th>
+                <th   style="height: 40px;" rowspan="2">Tour Plan</th>
                 <th   colspan="2">Departure from</th>
                 <th colspan="2"  >Arrival at</th>
                 <th colspan="6"  >Disbursements</th>
@@ -91,7 +93,7 @@
             </thead>
             <tbody>
             <tr>
-                <td  >
+                <td>
                     <mat-form-field class=" mat-form-field-fluid w-36"
                                     appearance="outline">
                                 <mat-label class="customMatLabel">Date</mat-label>
@@ -100,6 +102,23 @@
                                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                                 <mat-datepicker #picker2></mat-datepicker>
                     </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field class=" mat-form-field-fluid w-36" appearance="outline">
+<!--                    <mat-label>Tour Plan</mat-label>-->
+                    <mat-select formControlName="TourPlan">
+                        <mat-option>
+                            Select
+                        </mat-option>
+                        <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
+                            {{obj.DisbDesc}}
+                        </mat-option>
+                    </mat-select>
+                    </mat-form-field>
+<!--                    <mat-error *ngIf="isControlHasError('LoanDisbID','required')">-->
+<!--                        <strong class="mx-3">Loan Disbursment ID is mandatory</strong>-->
+<!--                    </mat-error>-->
+
                 </td>
                 <td  >
                     <mat-form-field class=" mat-form-field-fluid w-full"
@@ -230,6 +249,7 @@
                         <input matInput placeholder="Total">
                     </mat-form-field>
                 </td>
+                <td></td>
                 <td  >
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
