--- a/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
+++ b/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
@@ -1,1 +1,59 @@
-<p>user-activity-based-report works!</p>
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+
+
+    <div class="row pt-3">
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">User Activity Based Report</div>
+        </div>
+        <div class="col-lg-3 col-sm-12 self-center">
+
+            <p class="text-right">
+                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary"
+                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
+                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>
+                    Advance Filter
+                </button>
+            </p>
+
+        </div>
+    </div>
+
+    <div id="Kt-portlet-margin-top">
+        <div class="collapse show" id="collapseExample">
+            <div class="card card-body">
+                <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
+
+                    <div class="kt-form">
+
+                        <div class="kt-portlet__body">
+
+                            <div class="col-lg-12">
+                                <div class="flex" style="flex-wrap: wrap;">
+                                    <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false"
+                                                            [is_required_circle]="false"
+                                                            (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <button class="bg-gray-500" mat-raised-button color="primary" (click)="find()"
+                                                type="button">
+                                            <mat-icon class="mr-2">search</mat-icon>
+                                            Find
+                                        </button>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
+
+
+    </div>
+</div>
