--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -4,12 +4,13 @@
     <!-- Header -->
     <div class="flex pt-2" style="flex-wrap:wrap;" [formGroup]="tourPlanForm">
         <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="true" [should_show_circle]="true"
-            [is_required_circle]="true" (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                                [is_required_circle]="true"
+                                (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
                 </mat-label>
-                <input readonly matInput name="VisitedDate" formControlName="VisitedDate" autocomplete="off" />
+                <input readonly matInput name="VisitedDate" formControlName="VisitedDate" autocomplete="off"/>
                 <mat-icon matSuffix style="cursor: pointer;" (click)="onChange()">mode_edit</mat-icon>
             </mat-form-field>
 
@@ -20,7 +21,7 @@
                   class="inp"
                   formControlName="VisitedDate"
                 >
-             
+
               </mat-form-field> -->
         </div>
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
@@ -49,7 +50,7 @@
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Remarks</mat-label>
                     <input matInput appAlphaNumericField placeholder="Enter Remarks" formControlName="Remarks"
-                        autocomplete="off" />
+                           autocomplete="off"/>
                 </mat-form-field>
             </div>
         </div>
@@ -57,7 +58,8 @@
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <button class="ml-2 bg-gray-500" mat-raised-button color="primary" (click)="AddCal()">
-                    <mat-icon class="mr-2">add_circle_outline</mat-icon>Add
+                    <mat-icon class="mr-2">add_circle_outline</mat-icon>
+                    Add
                 </button>
             </div>
         </div>
@@ -68,33 +70,36 @@
         <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" id="map_canvas">
             <table class="table accordion table-striped">
                 <thead>
-                    <tr class="table-header-background">
-                        <th scope="col">SR. No </th>
-                        <th scope="col">User</th>
-                        <th scope="col">Visited Date</th>
-                        <th scope="col">Purpose </th>
-                        <th scope="col">Remarks </th>
-                        <th scope="col">Status </th>
-                        <th scope="col">Action</th>
-                    </tr>
+                <tr class="table-header-background">
+                    <th scope="col">SR. No</th>
+                    <th scope="col">User</th>
+                    <th scope="col">Visited Date</th>
+                    <th scope="col">Purpose</th>
+                    <th scope="col">Remarks</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Action</th>
+                </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
-                        <td>{{row+1}}</td>
-                        <td>{{item.UserId}}</td>
-                        <td>{{item.VisitedDate}}</td>
-                        <td>{{item.Purpose}}</td>
-                        <td>{{item.Remarks}}</td>
-                        <td> {{getStatus(item.Status)}} </td>
-                        <td><mat-icon style="cursor: pointer;" (click)="editTourPlan(item)">edit</mat-icon></td>
-                    </tr>
+                <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
+                    <td>{{row + 1}}</td>
+                    <td>{{item.UserId}}</td>
+                    <td>{{item.VisitedDate}}</td>
+                    <td>{{item?.PurposeName}}</td>
+                    <td>{{item.Remarks}}</td>
+                    <td> {{getStatus(item.Status)}} </td>
+                    <td>
+                        <mat-icon style="cursor: pointer;" (click)="editTourPlan(item)">edit</mat-icon>
+                    </td>
+                </tr>
                 </tbody>
             </table>
             <div *ngIf="tragetList" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
                 <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-                        <span class="font-bold text-green">Items per page:</span>
-        
-                <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                <span class="font-bold text-green">Items per page:</span>
+
+                <mat-select class="border-2 pl-1 py-2" display="inline" [(value)]="itemsPerPage"
+                            (valueChange)="paginate(1,$event)"
                             style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
                     <mat-option [value]="5">5</mat-option>
                     <mat-option [value]="10">10</mat-option>
@@ -105,8 +110,8 @@
                 <pagination-controls display="inline" (pageChange)="paginate($event)"
                                      style="display: inline-block;"></pagination-controls>
                 <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-                <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
-        
+                <p style="float:right;">Total <b class="text-green">{{totalItems}}</b> items</p>
+
             </div>
         </div>
     </div>
