--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -79,23 +79,6 @@
                     </div>
 
                 </div>
-
-
-                <!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
-
-                <!--            <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-                <!--                <mat-label class="customMatLabel">Circle</mat-label>-->
-
-                <!--                <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
-                <!--                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
-                <!--                    >-->
-                <!--                        {{circle?.CircleCode}}-->
-                <!--                    </mat-option>-->
-                <!--                </mat-select>-->
-                <!--            </mat-form-field>-->
-                <!--        </div>-->
-
-
             </div>
         </div>
     </div>
@@ -156,7 +139,7 @@
                         <tbody>
                         <tr *ngFor="let child of activity.TourPlans">
                             <td style="width: 20%">{{child.VisitedDate}}</td>
-                            <td style="width: 20%">{{child.Purpose}}</td>
+                            <td style="width: 20%">{{child.PurposeName}}</td>
                             <td style="width: 20%">{{child.Remarks}}</td>
                             <td style="width: 20%">{{getStatus(child.Status)}}</td>
 
