--- a/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
+++ b/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
@@ -163,7 +163,7 @@
                                 <tbody>
                                 <tr *ngFor="let child of plan_by_date.TourPlans">
                                     <td style="width: 20%">{{child.VisitedDate ? child.VisitedDate : '-'}}</td>
-                                    <td style="width: 20%">{{child.Purpose ? child.Purpose : '-'}}</td>
+                                    <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
                                     <td style="width: 20%">{{child.Remarks ? child.Remarks : '-'}}</td>
                                     <td style="width: 20%">{{getStatus(child.Status)}}</td>
 
