changes + new report component

--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -369,7 +369,7 @@
             </mat-card>
         </div>
 
-        <div class="col-lg-4 col-sm-12 mt-5" *ngIf="IsReportCardVisable('reports/enabling-disabling-user-overtime')">
+        <div class="col-lg-4 col-sm-12 mt-5" *ngIf="IsReportCardVisable('reports/changes-to-user-access-rights')">
             <mat-card routerLink="enabling-disabling-user-overtime" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
 
                 <div class="d-grid" style="justify-items: center;">
@@ -377,7 +377,7 @@
 
 
                     <p class=" text-black"
-                    >Enabling And Disabling Of A User Over Time</p>
+                    >Changes To User Access Rights Over Time</p>
                 </div>
 
             </mat-card>
