--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row  justify-content-md-center">
+            <div class="row">
 
                 <div class="col-lg-6 table-responsive">
                     <p class="heading mb-2 text-lg">Recovery</p>
