--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-6 py-3">
                     <div class="shadow-sm border pt-2" *ngIf="CreditCeiling"    style="height: calc(100vh - 310px);" >
-                        <p class=" ml-3 mb-5" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                        <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
 
                         </app-pyramid-chart>
