--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -48,6 +48,7 @@
                                        [theme]="chartPerformanceIndicators?.theme"
                                        [responsive]="chartPerformanceIndicators?.responsive"
                                        [noData]="chartPerformanceIndicators?.noData"
+                                       [colors]="chartPerformanceIndicators?.colors"
                             >
 
                             </apx-chart>
