--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -45,7 +45,7 @@
                                        [theme]="chartPerformanceIndicators?.theme"
                                        [responsive]="chartPerformanceIndicators?.responsive"
                                        [noData]="chartPerformanceIndicators.noData"
-
+                                       [colors]="chartPerformanceIndicators?.colors"
                             >
                             </apx-chart>
                         </div>
