--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -57,17 +57,20 @@
                                         </mat-form-field>
                                     </div>
 
-                                    <mat-form-field class=" mat-form-field-fluid w-36" appearance="outline">
-                                        <!--                    <mat-label>Tour Plan</mat-label>-->
-                                        <mat-select formControlName="TourPlanId">
-                                            <mat-option>
-                                                Select
-                                            </mat-option>
-                                            <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
-                                                {{obj.DisbDesc}}
-                                            </mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label>Tour Plan</mat-label>
+                                            <mat-select formControlName="TourPlanId">
+                                                <mat-option>
+                                                    Select
+                                                </mat-option>
+                                                <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
+                                                    {{obj.DisbDesc}}
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
