--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border"   style="height: calc(100vh - 310px);">
+                    <div class="shadow-sm border"style="height: 365px;">
                         <div id="chart" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions?.series"
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3 pb-1">
-                    <div class="shadow-sm border pt-2"    style="height: calc(100vh - 310px);" *ngIf="CreditCeiling">
+                    <div class="shadow-sm border pt-2" style="height: 365px;" *ngIf="CreditCeiling">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
 
