--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -34,7 +34,7 @@
     <div class="flex flex-auto" style="flex-direction: column;">
         <div class="row">
             <div class="col-lg-6 col-sm-12 my-2  ">
-                <div class="shadow-sm border"   style="height: calc(100vh - 310px);">
+                <div class="shadow-sm border"style="height: 365px;">
                     <div id="chart" class=" mt-0 py-3  " *ngIf="chartOptions1">
                         <p class="text-green px-2 font-bold mb-0">Performance Indicators</p>
                         <apx-chart
@@ -51,7 +51,7 @@
 
             </div>
             <div class="col-lg-6 col-sm-12 my-2">
-                <div class="shadow-sm border"   style="height: calc(100vh - 310px);">
+                <div class="shadow-sm border"style="height: 365px;">
                     <div id="chart" class=" mt-0 py-3" *ngIf="chartOptions2">
                         <p class="text-green px-2 font-bold mb-0">Circle Bench Mark</p>
                         <apx-chart
@@ -71,7 +71,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-12 my-2">
-                <div class="shadow-sm border"   style="height: calc(100vh - 310px);">
+                <div class="shadow-sm border"style="height: 365px;">
                     <div id="chart" class="mt-0 py-3" *ngIf="chartOptions2">
                         <p class="text-green px-2 font-bold mb-0">Loan Portfolio</p>
                         <apx-chart
