--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.scss
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.scss
@@ -18,3 +18,11 @@
 #map_canvas {
     height: calc(100vh - 350px);
 }
+
+.remarks-box{
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    width: 160px; 
+    height: 1.2em; 
+    white-space: nowrap;
+}
